padding fix on small buttons

--- a/src/sass/partials/buttons.scss
+++ b/src/sass/partials/buttons.scss
@@ -30,8 +30,7 @@ button {
     vertical-align: text-bottom;
   }
   &.button-small {
-    padding: 3px 5px;
-    font-size: 1rem;
+    padding: 5px 7px 3px 7px;
     line-height: 1rem;
     [class^="icon-"],
     [class*=" icon-"] {
