--- a/src/sass/partials/core.scss
+++ b/src/sass/partials/core.scss
@@ -407,12 +407,7 @@ body {
     }
     .button {
       margin: 0 0 0 5px;
-      padding-top: 0;
-      padding-bottom: 0;
       float: right;
-      display: inline-block;
-      font-size: 0.8rem;
-      line-height: 1.5rem;
       [class^="icon-"],
       [class*=" icon-"] {
         font-size: 0.8rem;
